# learn_games101

./: .clang-format  CMakeLists.txt  README.md
cmake/: module_vcpkg.cmake
src/: CMakeLists.txt
src/Assignment1/: CMakeLists.txt  main.cpp
src/Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
src/Assignment3/Code/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
src/Assignment4/Code/: CMakeLists.txt  main.cpp
src/Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
src/Assignment6/Code/: BVH.cpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
src/Assignment7/Code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp
src/pa0/: CMakeLists.txt  main.cpp
